# DiskRookie

./: .env.example  .gitmodules  AGENTS.md  Cargo.toml  README.md  RELEASE.md  clippy.toml
.github/workflows/: ci.yml  release.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/frontend/: eslint.config.js  package-lock.json  package.json  tailwind.config.js
apps/desktop/frontend/src/: App.tsx  index.css
apps/desktop/frontend/src/components/: AIChat.tsx  AISettings.tsx  CloudStorageSelector.tsx  CloudStorageSettings.tsx  ExpertMode.tsx  SnapshotDialog.tsx  SuggestionCard.tsx  TaskQueueDialog.tsx
apps/desktop/frontend/src/services/: ai-analysis.ts  ai.ts  notification.ts  settings.ts  snapshot.ts  taskQueue.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/ai-engine/: Cargo.toml
crates/ai-engine/src/: lib.rs
crates/ai-engine/src/llm/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/disk-scanner/: Cargo.toml
crates/disk-scanner/examples/: ntfs_volume_info.rs
crates/disk-scanner/src/: filters.rs  lib.rs  mft_scan.rs  scanner.rs
crates/disk-scanner/tests/: README_TOP500_TIMING.md  disk_usage_comparison.rs  mft_record0_diagnostic.rs  ntfs_reader_c_drive.rs  scan_timing.rs
crates/domain-model/: Cargo.toml
crates/domain-model/src/: lib.rs  scan_result.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
docs/: BAIDU_NETDISK_SETUP.md  BAIDU_QUICK_START.md  oauth.html
(+10 files in other folders)
